--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CashBack
-#opentracing.jaeger.http-sender.url=http://jaeger-collector-jaegar.192.168.64.10.nip.io/api/traces
-opentracing.jaeger.udp-sender.host=jaeger-agent.jaeger.svc.cluster.local #localhost
-opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.http-sender.url=jaeger-collector.jaeger.svc.cluster.local:14267/api/traces #http://jaeger-collector-jaegar.192.168.64.10.nip.io/api/traces
+#opentracing.jaeger.udp-sender.host=jaeger-agent.jaeger.svc.cluster.local #localhost
+#opentracing.jaeger.udp-sender.port=6831
 #opentracing.jaeger.probabilistic-sampler.sampling-rate=0.01
 
