Changed to spring boot 2.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=CashBack
-opentracing.jaeger.http-sender.url=http://jaeger-collector.jaeger.svc.cluster.local:14267/api/traces 
-#http://jaeger-collector-jaegar.192.168.64.10.nip.io/api/traces
+opentracing.jaegar.log-spans=true
+opentracing.jaeger.http-sender.url=http://jaeger-collector-jaeger.apps.na311.openshift.opentlc.com/api/traces
+opentracing.jaeger.const-sampler.decision = true
 
 #opentracing.jaeger.udp-sender.host=jaeger-agent.jaeger.svc.cluster.local #localhost
 #opentracing.jaeger.udp-sender.port=6831
